Added mode of testing JDK with SecurityManager enabled.  Fixed unit tests to allow for possibility of SAAJ packages being protected by package.access in java.security file.